--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -10,5 +10,6 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           MSG_MINIMAL: true
-          SLACK_TITLE: ''
+          SLACK_FOOTER: false
+          SLACK_TITLE: false
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
