--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -10,6 +10,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           MSG_MINIMAL: true
-          SLACK_FOOTER: false
-          SLACK_TITLE: false
+          SLACK_FOOTER: null
+          SLACK_TITLE: null
+          SLACK_ICON: false
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
