--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -2,6 +2,7 @@ on: push
 name: Slack Notification Demo
 jobs:
   slackNotification:
+    runs-on: ubuntu-latest
     steps:
       - name: Send custom JSON data to Slack workflow
         id: slack
