test slack notification 13

--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -11,8 +11,10 @@ jobs:
           # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
             {
-              "key": "value",
-              "foo": "bar"
+              "channel": "@leandro",
+              "username": "webhookbot",
+              "text": "Hellow world",
+              "icon_emoji": ":ghost:"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
