--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -13,7 +13,7 @@ jobs:
             {
               "channel": "@leandro",
               "username": "Github Actions Deployment Monitor",
-              "text": "<@leandro> GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "text": "<@leandro> GitHub Action build result: ${{ job.status }}\n${{ github.event.head_commit.message }}",
               "icon_emoji": ":github:"
             }
         env:
