--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Send custom JSON data to Slack workflow
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
-        if: ${{ github.ref_name == "develop" }}
+        if: ${{ github.ref_name == 'develop' }}
         with:
           # This data can be any valid JSON from a previous step in the GitHub Action
           payload: |
