--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -51,7 +51,10 @@ jobs:
         with:
           payload: |
             {
-              "channel": "@leandro", "username": "Github Actions Deployment Monitor", "text": "<@leandro> A deploy to Metronome app in prod is starting - ${{ github.event.head_commit.message }}","icon_emoji": ":github:"
+              "channel": "@leandro",
+              "username": "Github Actions Deployment Monitor",
+              "text": "<@leandro> A deploy to Metronome app in prod is starting - ${{ github.event.head_commit.message }}",
+              "icon_emoji": ":github:"
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
