test slack notification 47

--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -4,6 +4,10 @@ jobs:
   slackNotification:
     runs-on: ubuntu-latest
     steps:
+      - name: Show GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - name: Notify staging deploy started 
         id: slack_staging_start
         uses: slackapi/slack-github-action@v1.23.0
