--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Prepare
         id: slack-prepare
         run: |
-          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-          COMMIT_MESSAGE_TRIMMED=${COMMIT_MESSAGE//$'\n'/'%0A'}
+          COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}"
           echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
       - name: Notify staging deploy started  
         id: slack_staging_start
