--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Prepare
         id: slack-prepare
         run: |
-          COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}
-          echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
+          echo "::set-output name=commit-message::${{ toJson(github.event.head_commit.message) }}"
       - name: Notify staging deploy started  
         id: slack_staging_start
         uses: slackapi/slack-github-action@v1.23.0
