--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -11,7 +11,9 @@ jobs:
         
       - name: Prepare
         id: slack-prepare
-        run: echo "::set-output name=commit-message::${{ toJson(github.event.head_commit.message) }}"
+        run: |
+          COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}
+          echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
       - name: Notify staging deploy started  
         id: slack_staging_start
         uses: slackapi/slack-github-action@v1.23.0
