--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -4,6 +4,11 @@ jobs:
   slackNotification:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      
       - name: Notify deployment started
         uses: ./.github/actions/notify-deployment-started
 
