--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -11,6 +11,10 @@ jobs:
       
       - name: Notify deployment started
         uses: ./.github/actions/notify-deployment-started
+        with:
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
 
       - name: Notify deployment finished
         uses: ./.github/actions/notify-deployment-finished
+        with:
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
