--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -1,6 +1,11 @@
 name: Slack notify
 description: Notifies to slack via a message on a given channel
 
+inputs:
+  slack_webhook:
+    description: 'The slack incomming webhook url'
+    required: true
+    
 runs:
   using: composite
   steps:
@@ -23,7 +28,7 @@ runs:
             "icon_emoji": ":github:"
           }
       env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
         
     - name: Notify prod deploy started
       id: slack_prod_start
@@ -38,4 +43,4 @@ runs:
             "icon_emoji": ":github:"
           }
       env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
