test slack notification 65
dasd asd

--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -2,30 +2,27 @@ name: Slack notify
 description: Notifies to slack via a message on a given channel
 
 inputs:
-  slack_webhook: 
+  slack_webhook:
     description: 'The slack incomming webhook url'
     required: true
 
 runs:
   using: composite
   steps:
-    - name: Notify prod deploy finished
-      id: slack_prod_finished
-      uses: slackapi/slack-github-action@v1.23.0
-      if: ${{ github.ref_name == 'main' }}
-      with:
-        payload: |
-          {
-            "channel": "@leandro",
-            "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to Metronome app in prod has just finished.",
-            "icon_emoji": ":github:"
-          }
+    - name: Show GitHub context
       env:
-        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
-    
-    - name: Notify staging deploy finished
-      id: slack_staging_finished
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+      shell: bash
+
+    - name: Prepare commit message
+      run: |
+        COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}
+        echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
+      shell: bash
+
+    - name: Notify staging deploy started
+      id: slack_staging_start
       uses: slackapi/slack-github-action@v1.23.0
       if: ${{ github.ref_name == 'develop' }}
       with:
@@ -33,7 +30,22 @@ runs:
           {
             "channel": "@leandro",
             "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to Metronome app in staging has just finished.",
+            "text": "<@leandro> A deploy to Metronome app in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
+            "icon_emoji": ":github:"
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
+
+    - name: Notify prod deploy started
+      id: slack_prod_start
+      uses: slackapi/slack-github-action@v1.23.0
+      if: ${{ github.ref_name == 'main' }}
+      with:
+        payload: |
+          {
+            "channel": "@leandro",
+            "username": "Github Actions Deployment Monitor",
+            "text": "<@leandro> A deploy to Metronome app in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
             "icon_emoji": ":github:"
           }
       env:
