--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -5,33 +5,12 @@ inputs:
   slack_webhook:
     description: 'The slack incomming webhook url'
     required: true
-    
+
 runs:
   using: composite
   steps:
-    - name: Prepare commit message
-      run: |
-        COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}
-        echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
-      shell: bash
-      
-    - name: Notify staging deploy started
-      id: slack_staging_start
-      uses: slackapi/slack-github-action@v1.23.0
-      if: ${{ github.ref_name == 'develop' }}
-      with:
-        payload: |
-          {
-            "channel": "@leandro",
-            "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to Metronome app in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
-            "icon_emoji": ":github:"
-          }
-      env:
-        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
-        
-    - name: Notify prod deploy started
-      id: slack_prod_start
+    - name: Notify prod deploy finished
+      id: slack_prod_finished
       uses: slackapi/slack-github-action@v1.23.0
       if: ${{ github.ref_name == 'main' }}
       with:
@@ -39,7 +18,22 @@ runs:
           {
             "channel": "@leandro",
             "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to Metronome app in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
+            "text": "<@leandro> A deploy to Metronome app in prod has just finished.",
+            "icon_emoji": ":github:"
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
+
+    - name: Notify staging deploy finished
+      id: slack_staging_finished
+      uses: slackapi/slack-github-action@v1.23.0
+      if: ${{ github.ref_name == 'develop' }}
+      with:
+        payload: |
+          {
+            "channel": "@leandro",
+            "username": "Github Actions Deployment Monitor",
+            "text": "<@leandro> A deploy to Metronome app in staging has just finished.",
             "icon_emoji": ":github:"
           }
       env:
