test slack notification 66
dasd asd

--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -16,6 +16,7 @@ runs:
       shell: bash
 
     - name: Prepare commit message
+      id: slack-prepare
       run: |
         COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}
         echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
