--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -3,8 +3,21 @@ description: Notifies to slack via a message on a given channel
 
 inputs:
   slack_webhook:
-    description: 'The slack incomming webhook url'
+    description: 'The slack incoming webhook url'
     required: true
+
+  prod_branch:
+    description: 'The branch for production deployments'
+    default: main
+  
+  staging_branch:
+    description: 'The branch for staging deployments'
+    default: develop
+
+  app_name:
+    description: 'The name of the app being deployed'
+    required: true
+    default: Metronome app
 
 runs:
   using: composite
@@ -12,13 +25,13 @@ runs:
     - name: Notify prod deploy finished
       id: slack_prod_finished
       uses: slackapi/slack-github-action@v1.23.0
-      if: ${{ github.ref_name == 'main' }}
+      if: ${{ github.ref_name == inputs.prod_branch }}
       with:
         payload: |
           {
             "channel": "@leandro",
             "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to Metronome app in prod has just finished.",
+            "text": "<@leandro> A deploy to ${{ inputs.app_name }} in prod has just finished.",
             "icon_emoji": ":github:"
           }
       env:
@@ -27,13 +40,13 @@ runs:
     - name: Notify staging deploy finished
       id: slack_staging_finished
       uses: slackapi/slack-github-action@v1.23.0
-      if: ${{ github.ref_name == 'develop' }}
+      if: ${{ github.ref_name == inputs.staging_branch }}
       with:
         payload: |
           {
             "channel": "@leandro",
             "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to Metronome app in staging has just finished.",
+            "text": "<@leandro> A deploy to ${{ inputs.app_name }} in staging has just finished.",
             "icon_emoji": ":github:"
           }
       env:
