--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -5,19 +5,24 @@ inputs:
   slack_webhook:
     description: 'The slack incoming webhook url'
     required: true
-
   prod_branch:
     description: 'The branch for production deployments'
     default: main
-  
   staging_branch:
     description: 'The branch for staging deployments'
     default: develop
-
   app_name:
     description: 'The name of the app being deployed'
     required: true
     default: Metronome app
+  slack_channel:
+    description: 'The name of channel to notify on'
+    required: true
+    default: ar-team-priv
+  slack_mention:
+    description: 'The mention to include in the message'
+    required: true
+    default: <!here>
 
 runs:
   using: composite
@@ -29,14 +34,13 @@ runs:
       with:
         payload: |
           {
-            "channel": "ar-team-priv",
+            "channel": "${inputs.slack_channel}",
             "username": "Github Actions Deployment Monitor",
-            "text": "<!here> A deploy to ${{ inputs.app_name }} in prod has just finished.",
+            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in prod has just finished.",
             "icon_emoji": ":github:"
           }
       env:
         SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
-
     - name: Notify staging deploy finished
       id: slack_staging_finished
       uses: slackapi/slack-github-action@v1.23.0
@@ -44,9 +48,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "ar-team-priv",
+            "channel": "${inputs.slack_channel}",
             "username": "Github Actions Deployment Monitor",
-            "text": "<!here> A deploy to ${{ inputs.app_name }} in staging has just finished.",
+            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in staging has just finished.",
             "icon_emoji": ":github:"
           }
       env:
