--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -5,20 +5,24 @@ inputs:
   slack_webhook:
     description: 'The slack incoming webhook url'
     required: true
-
   prod_branch:
     description: 'The branch for production deployments'
     default: main
-
   staging_branch:
     description: 'The branch for staging deployments'
     default: develop
-
   app_name:
     description: 'The name of the app being deployed'
     required: true
     default: Metronome app
-
+  slack_channel:
+    description: 'The name of channel to notify on'
+    required: true
+    default: ar-team-priv
+  slack_mention:
+    description: 'The mention to include in the message'
+    required: true
+    default: <!here>
 runs:
   using: composite
   steps:
@@ -27,14 +31,12 @@ runs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
       shell: bash
-
     - name: Prepare commit message
       id: slack-prepare
       run: |
         COMMIT_MESSAGE=${{ toJson(github.event.head_commit.message) }}
         echo "::set-output name=commit-message::${COMMIT_MESSAGE}"
       shell: bash
-
     - name: Notify staging deploy started
       id: slack_staging_start
       uses: slackapi/slack-github-action@v1.23.0
@@ -42,14 +44,13 @@ runs:
       with:
         payload: |
           {
-            "channel": "@leandro",
+            "channel": "${inputs.slack_channel}",
             "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to ${{ inputs.app_name }} in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
+            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
             "icon_emoji": ":github:"
           }
       env:
         SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
-
     - name: Notify prod deploy started
       id: slack_prod_start
       uses: slackapi/slack-github-action@v1.23.0
@@ -57,9 +58,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "@leandro",
+            "channel": "${inputs.slack_channel}",
             "username": "Github Actions Deployment Monitor",
-            "text": "<@leandro> A deploy to ${{ inputs.app_name }} in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
+            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
             "icon_emoji": ":github:"
           }
       env:
