--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -8,15 +8,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      
       - name: Notify deployment started
         uses: ./.github/actions/notify-deployment-started
         with:
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           app_name: Metronome app
-
+          slack_channel: @leandro
+          slack_mention: <@leandro>
       - name: Notify deployment finished
         uses: ./.github/actions/notify-deployment-finished
         with:
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           app_name: Metronome app
+          slack_channel: @leandro
+          slack_mention: <@leandro>
