--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -13,12 +13,12 @@ jobs:
         with:
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           app_name: Metronome app
-          slack_channel: @leandro
+          slack_channel: "@leandro"
           slack_mention: <@leandro>
       - name: Notify deployment finished
         uses: ./.github/actions/notify-deployment-finished
         with:
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           app_name: Metronome app
-          slack_channel: @leandro
+          slack_channel: "@leandro"
           slack_mention: <@leandro>
