test slack notification 72
dasd asd

--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -44,9 +44,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "${inputs.slack_channel}",
+            "channel": "${{ inputs.slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
+            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in staging is starting - ${{ steps.slack-prepare.outputs.commit-message }}",
             "icon_emoji": ":github:"
           }
       env:
@@ -58,9 +58,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "${inputs.slack_channel}",
+            "channel": "${{ inputs.slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
+            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in prod is starting - ${{ toJSON(github.event.head_commit.message) }}",
             "icon_emoji": ":github:"
           }
       env:
