test slack notification 73
dasd asd

--- a/.github/actions/notify-deployment-started/action.yml
+++ b/.github/actions/notify-deployment-started/action.yml
@@ -31,6 +31,7 @@ runs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
       shell: bash
+    # This step is necessary otherwise using github.event.head_commit.message directly would break the yml when the commit message had linebreaks
     - name: Prepare commit message
       id: slack-prepare
       run: |
