--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -34,9 +34,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "${inputs.slack_channel}",
+            "channel": "${{ inputs.slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in prod has just finished.",
+            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in prod has just finished.",
             "icon_emoji": ":github:"
           }
       env:
@@ -48,9 +48,9 @@ runs:
       with:
         payload: |
           {
-            "channel": "${inputs.slack_channel}",
+            "channel": "${{ inputs.slack_channel }}",
             "username": "Github Actions Deployment Monitor",
-            "text": "${inputs.slack_mention} A deploy to ${{ inputs.app_name }} in staging has just finished.",
+            "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in staging has just finished.",
             "icon_emoji": ":github:"
           }
       env:
