--- a/.github/workflows/test-notify-slack.yml
+++ b/.github/workflows/test-notify-slack.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Show GitHub action_status
         env:
           GITHUB_ACTION_STATUS: ${{ github.action_status }}
-        run: echo "GITHUB_ACTION_STATUS"
+        run: echo "$GITHUB_ACTION_STATUS"
         shell: bash
