--- a/.github/actions/notify-deployment-finished/action.yml
+++ b/.github/actions/notify-deployment-finished/action.yml
@@ -48,7 +48,7 @@ runs:
       with:
         payload: |
           {
-            "channel": "caca",
+            "channel": "${{ inputs.slack_channel }}",
             "username": "Github Actions Deployment Monitor",
             "text": "${{ inputs.slack_mention }} A deploy to ${{ inputs.app_name }} in staging has just finished.",
             "icon_emoji": ":github:"
